--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 version: "3.2"
 
 services:
-  db:
+  mysql:
+    container_name: mysql
     image: mysql:latest
     volumes:
       - ./db_data:/var/lib/mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: somewordpress
+      MYSQL_ROOT_PASSWORD: d2Oqadruj9*
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
-      MYSQL_PASSWORD: 12345 #d2Oqadruj9*
+      MYSQL_PASSWORD: d2Oqadruj9*
 
   wordpress:
+    container_name: wordpress
     depends_on:
       - db
     image: wordpress:latest
@@ -24,22 +26,7 @@ services:
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: 12345 #d2Oqadruj9*
-      WORDPRESS_DB_NAME: wordpress
-
-  wordpress:
-    depends_on:
-      - db
-    image: wordpress:latest
-    volumes:
-      - ./wordpress_data:/var/www/html
-    ports:
-      - "8000:80"
-    restart: always
-    environment:
-      WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: 12345 #d2Oqadruj9*
+      WORDPRESS_DB_PASSWORD: d2Oqadruj9*
       WORDPRESS_DB_NAME: wordpress
 
 volumes:
