--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       MYSQL_ROOT_PASSWORD: d2Oqadruj9*
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
+      MYSQL_PASSWORD: d2Oqadruj9*
 
   wordpress:
     container_name: wordpress
     depends_on:
-      - db
+      - mysql
     image: wordpress:latest
     volumes:
       - ./wordpress_data:/var/www/html
@@ -24,7 +24,7 @@ services:
       - "8000:80"
     restart: always
     environment:
-      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_HOST: mysql:3306
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: d2Oqadruj9*
       WORDPRESS_DB_NAME: wordpress
