--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,20 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: 12345 #d2Oqadruj9*
       WORDPRESS_DB_NAME: wordpress
+  
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+      - '8080:80'
+    environment:
+      PMA_HOST: db
+      MYSQL_USERNAME: user
+      MYSQL_ROOT_PASSWORD: somewordpress
+    # networks:
+    #   - testing
 
 volumes:
   db_data: {}
